--- a/package.json
+++ b/package.json
@@ -10,17 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "classnames": "^2.5.1",
-    "deep-equal": "^2.2.3",
-    "is-hotkey": "^0.2.0",
-    "is-url": "^1.2.4",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "slate": "^0.103.0",
-    "slate-react": "^0.106.0",
-    "uuid": "^10.0.0"
+    "slate-react": "^0.106.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
