--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "is-hotkey": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slate": "^0.103.0",
+    "slate-history": "^0.100.0",
     "slate-react": "^0.106.0"
   },
   "devDependencies": {
