--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "slate": "^0.103.0",
     "slate-history": "^0.100.0",
-    "slate-react": "^0.106.0"
+    "slate-react": "^0.106.0",
+    "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
