--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
+    "image-extensions": "^1.1.0",
     "is-hotkey": "^0.2.0",
+    "is-url": "^1.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slate": "^0.103.0",
